[gd_scene load_steps=12 format=2]

[ext_resource path="res://SPRITES/MENU/Webp.net-resizeimage (1).png" type="Texture" id=1]
[ext_resource path="res://scenes/MenuScene/buttons/RetryButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MenuScene/buttons/RetryButton.gd" type="Script" id=3]
[ext_resource path="res://scenes/MenuScene/buttons/MenuButtonSnc.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MenuScene/buttons/MenuButtonSnc.gd" type="Script" id=5]
[ext_resource path="res://scripts/Scenary.gd" type="Script" id=6]
[ext_resource path="res://SPRITES/BACKGROUND_SCROLL/background2.jpg" type="Texture" id=7]
[ext_resource path="res://SPRITES/BACKGROUND/background.jpg" type="Texture" id=8]
[ext_resource path="res://SPRITES/TILE_SCROLL/TILEx16.png" type="Texture" id=9]
[ext_resource path="res://fonts/monserrat_35.tres" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1104.18, 1130.56 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = -976.0
margin_top = -1008.0
margin_right = -436.0
margin_bottom = -638.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 540.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 295.823, 89.5 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 183.0
margin_right = 540.0
margin_bottom = 370.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 540.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 32.6248, 29.375 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RetryButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="MenuButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 44.0
margin_bottom = 84.0
script = ExtResource( 5 )

[node name="Scenary" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="Scenary"]
position = Vector2( -1105.97, -1132.98 )

[node name="Background0" type="Sprite" parent="Scenary/Background"]
position = Vector2( 560, 280 )
scale = Vector2( 0.562148, 0.242584 )
z_index = -2
texture = ExtResource( 7 )
normal_map = ExtResource( 8 )
offset = Vector2( -94.3257, -166.751 )

[node name="Background1" type="Sprite" parent="Scenary/Background"]
position = Vector2( 1503.29, 240.086 )
scale = Vector2( 0.563012, 0.243782 )
z_index = -2
texture = ExtResource( 7 )
flip_h = true

[node name="Tile" type="Node2D" parent="Scenary"]

[node name="Tile2" type="Sprite" parent="Scenary/Tile"]
position = Vector2( -466.303, -689.411 )
scale = Vector2( 0.240909, 0.246756 )
z_index = -1
texture = ExtResource( 9 )

[node name="Tile" type="Sprite" parent="Scenary/Tile"]
position = Vector2( 824.031, -690.483 )
scale = Vector2( 0.240909, 0.246756 )
z_index = -1
texture = ExtResource( 9 )

[node name="Control" type="Control" parent="."]
margin_left = -942.0
margin_top = -1089.5
margin_right = -465.0
margin_bottom = -1008.5
mouse_default_cursor_shape = 6

[node name="Label" type="Label" parent="Control"]
margin_left = -161.0
margin_right = 636.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.686275, 0.701961, 0.87451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 10
text = "Game Over"
align = 1
[connection signal="pressed" from="Menu/CenterRow/Buttons/RetryButton" to="Menu/CenterRow/Buttons/RetryButton" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/MenuButton" to="Menu/CenterRow/Buttons/MenuButton" method="_on_MenuButton_pressed"]
